== 0.0.4 2010-10-01

 * Attributes are inheritable.

== 0.0.3 2010-09-29

 * Don't open unnecessary database transactions on save.

== 0.0.2 2010-09-28

 * Rename to Active Nomad.

== 0.0.1 2010-09-28

 * Hi.