@@ -6,16 +6,15 @@ ActiveRecord objects with a customizable persistence strategy.
 
 Sometimes you want an Active Record object that does not live in the database.
 Perhaps it never needs to be persisted, or you'd like to store it in a cookie,
-or some other store, but it would still be handy to have ActiveRecord's ability
+or a key-value store, but it would still be handy to have ActiveRecord's ability
 to cast values, run validations, or fire callbacks.
 
-Ideally, the persistence strategy would be pluggable. With Active Nomad, it is!
+If only the persistence strategy was pluggable...
 
 ## How
 
-Subclass from ActiveNomad::Base and declare your attributes with the
-`attribute` class method. The arguments look just like creating a column in a
-migration:
+Subclass from ActiveNomad::Base and declare your attributes with the `attribute`
+class method. The arguments look just like creating a column in a migration:
 
     class Thing < ActiveNomad::Base
       attribute :name, :string, :limit => 20
@@ -25,27 +24,38 @@ To persist the record, Active Nomad calls `persist`, which calls a
 Proc registered by `to_save`. For example, here's how you could
 persist to a cookie:
 
-    thing = Thing.deserialize(cookies[:thing])
+    thing = Thing.from_json(cookies[:thing])
     thing.to_save do |thing|
-      cookies[:thing] = thing.serialize
+      cookies[:thing] = thing.to_json
       true
     end
 
 Things to note:
 
- * Active Nomad defines `serialize` and `deserialize` which will
-   serialize to and from a valid query string with predictable
-   attribute order (i.e., appropriate for a cookie).
  * The proc should return true if persistence was successful, false
    otherwise. This will be the return value of `save`, etc.
- * You may alternatively override `persist` in a subclass if you
-   don't want to register a proc for every instance.
+ * Active Nomad defines `to_json` and `from_json` which will serialize to and
+   from a JSON string with predictable attribute order (i.e., appropriate for a
+   cookie).
+ * You may alternatively override `persist` in a subclass if you don't want to
+   register a proc for every instance.
 
-## Transactions
+### Serialization formats
 
-In addition to customizing persistence, you can also customize
-transaction semantics by overriding the `transaction` class method in
-a base class. Example:
+Active Nomad provides serialization to and from:
+
+ * JSON (`to_json` and `from_json`)
+ * Query string (`to_query_string` and `from_query_string`)
+
+You can define your own formats easily using `to_serialized_attributes` and
+`from_serialized_attributes`. The former returns an `ActiveSupport::OrderedHash`
+of attribute names to serialized values (`String`s or `nil`s).
+
+### Transactions
+
+In addition to customizing persistence, you can also customize transaction
+semantics by overriding the `transaction` class method in a base class. Here's
+an example that implements transactions with Redis:
 
     class RedisNomad < ActiveNomad::Base
       def self.transaction
@@ -64,8 +74,8 @@ a base class. Example:
       end
     end
 
-`ActiveNomad::Base.transaction` simply calls the given block with no
-real transaction semantics.
+`ActiveNomad::Base.transaction` simply calls the given block with no real
+transaction semantics.
 
 ## Notes
 
