@@ -123,23 +123,138 @@ describe ActiveNomad::Base do
     end
   end
 
-  describe "#serialize" do
+  describe "#to_serialized_attributes" do
+    it "should return a list of attribute names with serialized attributes, sorted by name" do
+      klass = Class.new(ActiveNomad::Base) do
+        attribute :integer_attribute, :integer
+        attribute :string_attribute, :string
+        attribute :text_attribute, :text
+        attribute :float_attribute, :float
+        attribute :decimal_attribute, :decimal
+        attribute :datetime_attribute, :datetime
+        attribute :timestamp_attribute, :timestamp
+        attribute :time_attribute, :time
+        attribute :date_attribute, :date
+        attribute :binary_attribute, :binary
+        attribute :boolean_attribute, :boolean
+        attribute :nil_attribute, :string
+      end
+      instance = klass.new(
+        :integer_attribute => 5,
+        :string_attribute => 'string',
+        :text_attribute => 'text',
+        :float_attribute => 1.23,
+        :decimal_attribute => BigDecimal.new('123.45'),
+        :datetime_attribute => Time.parse('03 Feb 2001 12:34:56 -0000'),
+        :timestamp_attribute => Time.parse('03 Feb 2001 12:34:56 -0000'),
+        :time_attribute => Time.parse('03 Feb 2001 12:34:56 -0000'),
+        :date_attribute => Date.parse('03 Feb 2001'),
+        :binary_attribute => "\0\1",
+        :boolean_attribute => true,
+        :nil_attribute => nil
+      )
+      instance.to_serialized_attributes.to_a.should == [
+        ['binary_attribute', "\0\1"],
+        ['boolean_attribute', 'true'],
+        ['date_attribute', '03 Feb 2001'],
+        ['datetime_attribute', '03 Feb 2001 12:34:56 -0000'],
+        ['decimal_attribute', '123.45'],
+        ['float_attribute', '1.23'],
+        ['integer_attribute', '5'],
+        ['nil_attribute', nil],
+        ['string_attribute', 'string'],
+        ['text_attribute', 'text'],
+        ['time_attribute', '03 Feb 2001 12:34:56 -0000'],
+        ['timestamp_attribute', '03 Feb 2001 12:34:56 -0000'],
+      ]
+    end
+  end
+
+  describe ".from_serialized_attributes" do
+    it "should create a new record with attributes deserialized from the given parameter list" do
+      klass = Class.new(ActiveNomad::Base) do
+        attribute :integer_attribute, :integer
+        attribute :string_attribute, :string
+        attribute :text_attribute, :text
+        attribute :float_attribute, :float
+        attribute :decimal_attribute, :decimal
+        attribute :datetime_attribute, :datetime
+        attribute :timestamp_attribute, :timestamp
+        attribute :time_attribute, :time
+        attribute :date_attribute, :date
+        attribute :binary_attribute, :binary
+        attribute :boolean_attribute, :boolean
+        attribute :nil_attribute, :boolean
+      end
+      instance = klass.from_serialized_attributes([
+        [:integer_attribute, '5'],
+        [:string_attribute, 'string'],
+        [:text_attribute, 'text'],
+        [:float_attribute, '1.23'],
+        [:decimal_attribute, '123.45'],
+        [:datetime_attribute, '03 Feb 2001 12:34:56 -0000'],
+        [:timestamp_attribute, '03 Feb 2001 12:34:56 -0000'],
+        [:time_attribute, '03 Feb 2001 12:34:56 -0000'],
+        [:date_attribute, '03 Feb 2001'],
+        [:binary_attribute, "\0\1"],
+        [:boolean_attribute, 'true'],
+        [:nil_attribute, nil]
+      ])
+      instance.integer_attribute.should == 5
+      instance.string_attribute.should == 'string'
+      instance.text_attribute.should == 'text'
+      instance.float_attribute.should == 1.23
+      instance.decimal_attribute.should == BigDecimal.new('123.45')
+      instance.datetime_attribute.should == Time.parse('03 Feb 2001 12:34:56 -0000')
+      instance.timestamp_attribute.should == Time.parse('03 Feb 2001 12:34:56 -0000')
+      instance.time_attribute.should == Time.parse('03 Feb 2001 12:34:56 -0000')
+      instance.date_attribute.should == Date.parse('03 Feb 2001')
+      instance.binary_attribute.should == "\0\1"
+      instance.boolean_attribute.should be_true
+      instance.nil_attribute.should be_nil
+    end
+
+    it "should work with any enumerable" do
+      klass = Class.new(ActiveNomad::Base) do
+        attribute :name, :string
+      end
+      params = Object.new
+      class << params
+        def each
+          yield :name, 'joe'
+        end
+      end
+      params.extend Enumerable
+      instance = klass.from_serialized_attributes(params)
+      instance.name.should == 'joe'
+    end
+
+    it "should leave defaults alone for attributes which are not set" do
+      klass = Class.new(ActiveNomad::Base) do
+        attribute :name, :string, :default => 'Joe'
+      end
+      instance = klass.from_serialized_attributes({})
+      instance.name.should == 'Joe'
+    end
+  end
+
+  describe "#to_query_string" do
     it "should serialize the attributes as a query string" do
       klass = Class.new(ActiveNomad::Base) do
         attribute :first_name, :string
         attribute :last_name, :string
       end
       instance = klass.new(:first_name => 'Joe', :last_name => 'Blow')
-      instance.serialize.should == 'first_name=Joe&last_name=Blow'
+      instance.to_query_string.should == 'first_name=Joe&last_name=Blow'
     end
   end
 
-  describe ".deserialize" do
+  describe ".from_query_string" do
     it "should create a new record with no attributes set if nil is given" do
       klass = Class.new(ActiveNomad::Base) do
         attribute :name, :string
       end
-      instance = klass.deserialize(nil)
+      instance = klass.from_query_string(nil)
       instance.name.should be_nil
     end
 
@@ -147,7 +262,7 @@ describe ActiveNomad::Base do
       klass = Class.new(ActiveNomad::Base) do
         attribute :name, :string
       end
-      instance = klass.deserialize('')
+      instance = klass.from_query_string('')
       instance.name.should be_nil
     end
 
@@ -155,7 +270,7 @@ describe ActiveNomad::Base do
       klass = Class.new(ActiveNomad::Base) do
         attribute :name, :string
       end
-      instance = klass.deserialize(" \t")
+      instance = klass.from_query_string(" \t")
       instance.name.should be_nil
     end
 
@@ -163,19 +278,84 @@ describe ActiveNomad::Base do
       klass = Class.new(ActiveNomad::Base) do
         attribute :name, :string, :default => 'Joe'
       end
-      instance = klass.deserialize(" \t")
+      instance = klass.from_query_string(" \t")
       instance.name.should == 'Joe'
     end
   end
 
-  describe "roundtripping through #serialize and .deserialize" do
+  def self.it_should_roundtrip_through(serializer, deserializer, &block)
+    describe "roundtripping through ##{serializer} and .#{deserializer}" do
+      class_eval(&block) if block
+
+      (class << self; self; end).class_eval do
+        define_method :it_should_roundtrip do |type, value|
+          value = Time.at(value.to_i) if value.is_a?(Time) # chop off subseconds
+          it "should roundtrip #{value.inspect} correctly as a #{type}" do
+            klass = Class.new(ActiveNomad::Base) do
+              attribute :value, type
+            end
+            instance = klass.new(:value => value)
+            roundtripped = klass.send(deserializer, instance.send(serializer))
+            roundtripped.value.should == value
+          end
+        end
+      end
+
+      it_should_roundtrip :integer, nil
+      it_should_roundtrip :integer, 0
+      it_should_roundtrip :integer, 123
+
+      it_should_roundtrip :string, nil
+      it_should_roundtrip :string, ''
+      it_should_roundtrip :string, 'hi'
+
+      it_should_roundtrip :text, nil
+      it_should_roundtrip :text, ''
+      it_should_roundtrip :text, 'hi'
+
+      it_should_roundtrip :float, nil
+      it_should_roundtrip :float, 0
+      it_should_roundtrip :float, 0.123
+
+      it_should_roundtrip :decimal, nil
+      it_should_roundtrip :decimal, BigDecimal.new('0')
+      it_should_roundtrip :decimal, BigDecimal.new('123.45')
+
+      it_should_roundtrip :datetime, nil
+      it_should_roundtrip :datetime, Time.now.in_time_zone
+      # TODO: Support DateTime here, which is used when the value is
+      # outside the range of a Time.
+
+      it_should_roundtrip :timestamp, nil
+      it_should_roundtrip :timestamp, Time.now.in_time_zone
+
+      it_should_roundtrip :time, nil
+      it_should_roundtrip :time, Time.parse('2000-01-01 01:23:34').in_time_zone
+
+      it_should_roundtrip :date, nil
+      it_should_roundtrip :date, Date.today
+
+      it_should_roundtrip :binary, nil
+      it_should_roundtrip :binary, ''
+      it_should_roundtrip :binary, "\t\n"
+      #it_should_roundtrip :binary, "\0\1" # TODO: the JSON gem does not handle this
+
+      it_should_roundtrip :boolean, nil
+      it_should_roundtrip :boolean, true
+      it_should_roundtrip :boolean, false
+    end
+  end
+
+  it_should_roundtrip_through(:to_serialized_attributes, :from_serialized_attributes)
+
+  it_should_roundtrip_through(:to_query_string, :from_query_string) do
     it "should not be tripped up by delimiters in the keys" do
       klass = Class.new(ActiveNomad::Base) do
         attribute :'a=x', :string
         attribute :'b&x', :string
       end
       original = klass.new("a=x" => "1", "b&x" => "2")
-      roundtripped = klass.deserialize(original.serialize)
+      roundtripped = klass.from_query_string(original.to_query_string)
       roundtripped.send("a=x").should == "1"
       roundtripped.send("b&x").should == "2"
     end
@@ -186,64 +366,30 @@ describe ActiveNomad::Base do
         attribute :b, :string
       end
       original = klass.new(:a => "1=2", :b => "3&4")
-      roundtripped = klass.deserialize(original.serialize)
+      roundtripped = klass.from_query_string(original.to_query_string)
       roundtripped.a.should == "1=2"
       roundtripped.b.should == "3&4"
     end
+  end
 
-    def self.it_should_roundtrip(type, value)
-      value = Time.at(value.to_i) if value.is_a?(Time) # chop off subseconds
-      it "should roundtrip #{value.inspect} correctly as a #{type}" do
-        klass = Class.new(ActiveNomad::Base) do
-          attribute :value, type
-        end
-        instance = klass.new(:value => value)
-        roundtripped = klass.deserialize(instance.serialize)
-        roundtripped.value.should == value
+  it_should_roundtrip_through(:to_json, :from_json) do
+    it "should not be tripped up by delimiters in the keys" do
+      klass = Class.new(ActiveNomad::Base) do
+        attribute :"'a':b,c", :string
       end
+      original = klass.new("'a':b,c" => "1")
+      roundtripped = klass.from_json(original.to_json)
+      roundtripped.send("'a':b,c").should == "1"
     end
 
-    it_should_roundtrip :integer, nil
-    it_should_roundtrip :integer, 0
-    it_should_roundtrip :integer, 123
-
-    it_should_roundtrip :string, nil
-    it_should_roundtrip :string, ''
-    it_should_roundtrip :string, 'hi'
-
-    it_should_roundtrip :text, nil
-    it_should_roundtrip :text, ''
-    it_should_roundtrip :text, 'hi'
-
-    it_should_roundtrip :float, nil
-    it_should_roundtrip :float, 0
-    it_should_roundtrip :float, 0.123
-
-    it_should_roundtrip :decimal, nil
-    it_should_roundtrip :decimal, BigDecimal.new('0')
-    it_should_roundtrip :decimal, BigDecimal.new('123.45')
-
-    it_should_roundtrip :datetime, nil
-    it_should_roundtrip :datetime, Time.now.in_time_zone
-    # TODO: Support DateTime here, which is used when the value is
-    # outside the range of a Time.
-
-    it_should_roundtrip :timestamp, nil
-    it_should_roundtrip :timestamp, Time.now.in_time_zone
-
-    it_should_roundtrip :time, nil
-    it_should_roundtrip :time, Time.parse('2000-01-01 01:23:34').in_time_zone
-
-    it_should_roundtrip :date, nil
-    it_should_roundtrip :date, Date.today
-
-    it_should_roundtrip :binary, nil
-    it_should_roundtrip :binary, ''
-    it_should_roundtrip :binary, "\0\1"
-
-    it_should_roundtrip :boolean, nil
-    it_should_roundtrip :boolean, true
-    it_should_roundtrip :boolean, false
+    it "should not be tripped up by delimiters in the values" do
+      klass = Class.new(ActiveNomad::Base) do
+        attribute :a, :string
+      end
+      original = klass.new(:a => "'a':b,c")
+      roundtripped = klass.from_json(original.to_json)
+      roundtripped.a.should == "'a':b,c"
+    end
   end
 
   describe ".transaction" do
